--- a/gb/20/1/16/n11796741.md
+++ b/gb/20/1/16/n11796741.md
@@ -1,59 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/qdbzyr225/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qdbzyr225/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qdbzyr225/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myujtv3571/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>百年老报主编赞神韵展现伟大使命 远超期待</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001151756002639-600x400.jpg" />
-<h6>意大利百年老字号地方报纸《Il Piccolo》主编Alessio Radossi和夫人观看了美国神韵巡回艺术团于2020年1月15日在乌迪内（Udine）的演出。（Marco D’Ippolito／大纪元）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001151756002639-600x400.jpg" />
+<h6>意大利百年老字号地方报纸《Il Piccolo》主编Alessio Radossi和夫人观看了美国神韵艺术团于2020年1月15日在乌迪内（Udine）的演出。（Marco D’Ippolito／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月16日讯】（大纪元记者Marco D’Ippolito意大利乌迪内报导）观看了美国<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>巡回艺术团于2020年1月15日在<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%B9%8C%E8%BF%AA%E5%86%85%E5%B8%82%EF%BC%88udine%EF%BC%89.md">乌迪内市（Udine）</a>的演出后，百年老字号地方报纸主编Alessio Radossi称赞神韵不仅精美非凡，更展现出了伟大的使命，完全超出他的期待。</p>
-<p>Alessio Radossi是与李雅斯特市（Trieste）有近140年历史的报纸《Il Piccolo》的主编。《Il Piccolo》是李雅斯特市的主要日报，历史悠久，早在19世纪就已创立。他本人也是一名历史作家。当晚他专程从李雅斯特市来到乌迪内观看<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出。</p>
-<p>当晚与夫人一起观赏了神韵演出后，Radossi表示“从演出中很容易就了解了<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>，这些内涵会留下深深的记忆，让人震撼。”</p>
-<p>Radossi称赞演出中“精美的服饰、绚丽的色彩和高超的<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>”都让他耳目一新，惊叹不已。Radossi还特别惊讶于神韵演出中立体动态天幕的效果，“这绝对是创新之举，令人震撼！”</p>
-<p>从神韵演出中，Radossi表示他感受到神韵艺术家致力于恢复被破坏的<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>的强大力量。他钦佩地赞叹道：“这展现出一种伟大的使命，神韵艺术家不仅技艺超群，而且背后一定有很多努力付出。”</p>
-<p>Radossi表示“完全没有期待演出是如此辉煌”，他认为“神韵演出绝对值得一看”。</p>
+	<p>【大纪元2020年01月16日讯】（大纪元记者Marco D’Ippolito意大利乌迪内报导）观看了美国<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团于2020年1月15日在<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%B9%8C%E8%BF%AA%E5%86%85%E5%B8%82%EF%BC%88udine%EF%BC%89.md#1">乌迪内市（Udine）</a>的演出后，百年老字号地方报纸主编Alessio Radossi称赞神韵不仅精美非凡，更展现出了伟大的使命，完全超出他的期待。</p>
+<p>Alessio Radossi是与李雅斯特市（Trieste）有近140年历史的报纸《Il Piccolo》的主编。《Il Piccolo》是李雅斯特市的主要日报，历史悠久，早在19世纪就已创立。他本人也是一名历史作家。当晚他专程从李雅斯特市来到乌迪内观看<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出。</p>
+<p>当晚与妻子一起观赏了神韵演出后，Radossi表示：“从演出中很容易就了解了<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>，这些内涵会留下深深的记忆，让人震撼。”</p>
+<p>Radossi说演出中“精美的服饰、绚丽的色彩和高超的<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>”都让他耳目一新。Radossi还特别惊讶于神韵演出中立体动态天幕的效果，“这绝对是创新之举，令人震撼！”</p>
+<p>从神韵演出中，Radossi表示他感受到神韵艺术家致力于恢复被破坏的<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>的强大力量。他钦佩地赞叹道：“这展现出一种伟大的使命，神韵艺术家不仅技艺超群，而且背后一定有很多努力付出。”</p>
+<p>Radossi表示：“完全没有期待演出是如此辉煌”，他认为“神韵演出绝对值得一看”。</p>
 <p><strong>律师赞神韵美不胜收：仿佛置身中国</strong></p>
-<figure id="attachment_11796776" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/2001151604122639.jpg"><img class="wp-image-11796776 size-medium" src="http://i.epochtimes.com/assets/uploads/2020/01/2001151604122639-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">律师Alberto Tedeschi（左）与儿子于2020年1月15日，在意大利乌迪内观看神韵。（Marco D’Ippolito/大纪元）</figcaption></figure>
+<figure id="attachment_11796776" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001151604122639.jpg"><img class="wp-image-11796776 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001151604122639-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">律师Alberto Tedeschi（左）与儿子于2020年1月15日，在意大利乌迪内观看神韵。（Marco D’Ippolito/大纪元）</figcaption></figure>
 <p>Alberto Tedeschi是一名律师，在看过神韵后他感到很惊喜，Tedeschi说：“非常生动有趣，服装美丽精致，还有灯光和颜色。”他很意外“在这里居然能亲眼见到，我认为神韵非常美妙。”</p>
-<p>神韵<a href="https://github.com/qdbzyr225/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>采用中国古典、独特的身法、身韵和技巧使其具有丰富的表现力，Tedeschi说：“我对舞蹈风格特别感兴趣，这是我们在欧洲不常见到的。”他强调说，“神韵唤起（记忆），给人一种身在中国的感觉，就像人已经到了遥远的东方。”他认为“这是演出中最重要，也是最特别的部分。”</p>
+<p>神韵<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>采用中国古典、独特的身法、身韵和技巧使其具有丰富的表现力，Tedeschi说：“我对舞蹈风格特别感兴趣，这是我们在欧洲不常见到的。”他强调说，“神韵唤起（记忆），给人一种身在中国的感觉，就像人已经到了遥远的东方。”他认为“这是演出中最重要，也是最特别的部分。”</p>
 <p>“我不得不说，这是一场美不胜收的演出，我很喜爱。”演出结束后Tedeschi表示还意犹未尽，想要推荐给更多人看，“音乐非常有趣，也非常优美，这场演出相当值得一看。”</p>
 <p>责任编辑：肇宸</p>
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/16/n11796741.htm">百年老报主编赞神韵展现伟大使命 远超期待</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793826.htm">香港政府公布十项民生新措施</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793796.htm">周大福拟关闭香港不多于15间分店</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791381.htm">大陆年轻人近90%是“负翁” 房子车子压顶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11783168.htm">申鑫老板举报上海银行勾结宝能 侵吞百亿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11774772.htm">港铜锣湾书店店长：台湾朋友出门投票</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11748069.htm">2019楼市回顾 【楼市动向】增加供应无力 政治凌驾政策</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734090.htm">【楼市动向】采光权何时再得到保障？</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11790802.htm">中共外交部胡言乱语实录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793980.htm">【唐靖远快评】武统台湾？中共恐有心无力</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795625.htm">【更新】美中签署历史性第一阶段贸易协议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794919.htm">伊朗国营电视台主播辞职：原谅我说谎13年</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760836.htm">他将前世今生的爱 又带到了妻子的来世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791100.htm">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793546.htm">港男纪律部队坠楼过程被录 评论：老天有眼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/18/n11664716.htm">【思想领袖】艾贝尔：气候变化说词受政治操控</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791676.htm">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788080.htm">恭喜蔡英文 何韵诗讽林郑为“反共之母”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788549.htm">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/11/n11786085.md#1">软件公司经理：神韵演出打动人心</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/12/n11786508.md#1">世界自然基金会区域主管观神韵 赞天人合一</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/12/n11786599.md#1">“神韵音乐震撼心灵”欧洲医药界高管感佩</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/13/n11789618.md#1">神韵在欧洲熠熠生辉 意大利政界高官盛赞</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11793781.md#1">神韵讲述美好故事 海军建筑师度过美好时光</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731638.md#1">曼城连胜强势领跑英超 曼联狂灌九球紧追</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qdbzyr225/djy/blob/master/gb/20/1/16/n11796741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12731260.md#1">【解密时分】24亿美元 史上十大最贵战机</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731871.md#1">【拍案惊奇】CNN忽批贺锦丽 蓬佩奥再警示拜登</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727425.md#1">接受发型师义剪 流浪汉秒变绅士男震惊网友</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726784.md#1">【秦鹏直播】缅军方抓昂山素季 急坏拜登习近平？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12726845.md#1">金马影后马思纯疑患抑郁症 停工半年后首发声</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726294.md#1">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11796741.htm">百年老报主编赞神韵展现伟大使命 远超期待</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/myujtv3571/djy/blob/master/gb/20/1/16/n11796741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
